core/argocd/cmp-sops.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: argocd-repo-server
  namespace: argocd
spec:
  template:
    spec:
      volumes:
        - name: argocd-age-key
          secret:
            secretName: argocd-age-key
        - name: custom-tools
          emptyDir: {}
        - name: cmp-sops-plugin
          configMap:
            name: argocd-cmp-sops-plugin
      containers:
        - name: argocd-cmp-sops
          image: quay.io/argoproj/argocd:v3.5.4
          command: [/var/run/argocd/argocd-cmp-server]
          securityContext:
            runAsNonRoot: true
            runAsUser: 999
          volumeMounts:
            - name: var-files
              mountPath: /var/run/argocd
            - name: plugins
              mountPath: /home/argocd/cmp-server/plugins
            - name: tmp
              mountPath: /tmp
            - name: argocd-age-key
              mountPath: /age-key
              readOnly: true
            - name: custom-tools
              mountPath: /usr/local/bin/sops
              subPath: sops
            - name: cmp-sops-plugin
              mountPath: /home/argocd/cmp-server/config/plugin.yaml
              subPath: plugin.yaml
